# respondo

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
assets/: README.md
src/: respondo.py  text.py
src/ai/: __init__.py
src/botprotection/: __init__.py  detect.py
src/botprotection/akamai/: __init__.py
src/botprotection/datadome/: __init__.py
src/botprotection/hcaptcha/: __init__.py
src/botprotection/incapsula/: __init__.py
src/botprotection/kasada/: __init__.py
src/botprotection/recaptcha/: __init__.py
src/botprotection/turnstile/: __init__.py
src/cryptoutil/: __init__.py
src/htmlparse/: __init__.py
src/jsonparse/: __init__.py
src/responseutil/: __init__.py
src/textparse/: __init__.py
tests/: API.md  test_all.py  test_botprotection.py
tests/fixtures/: api.json  between.json  captcha.json  contact.json  crypto.json  ecommerce.json  encoding.json  htmlutil.json  json_extract.json  media.json  network.json  normalize_space.json  response_extras.json  response_helpers.json  security.json  social.json  structured.json
